chore: 🤖 svg-sprite-loader 和 cross-env BROWSER=none PORT=3080

--- a/src/components/HelloWorld/index.module.scss
+++ b/src/components/HelloWorld/index.module.scss
@@ -3,10 +3,13 @@
   align-items: center;
   justify-content: center;
 
+  .iconStore {
+    color: orange;
+  }
+
   .text {
     color: $brand;
     height: 50px; // ...TODO
     font-size: 30px; // ...TODO
-    // ...TODO 变成全局组件
   }
 }
