--- a/src/components/SvgIcon/index.scss
+++ b/src/components/SvgIcon/index.scss
@@ -1,6 +1,8 @@
 .svg-icon {
   width: 1em;
   height: 1em;
-  vertical-align: -0.15em;
+  line-height: 1;
   overflow: hidden;
+  display: inline-block;
+  vertical-align: middle;
 }
