--- a/src/components/HelloWorld/index.module.scss
+++ b/src/components/HelloWorld/index.module.scss
@@ -1,7 +1,9 @@
 .hello {
+  line-height: 1;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 20px;
 
   .icon {
     color: orange;
@@ -9,7 +11,13 @@
 
   .text {
     color: $brand;
-    height: 50px; // ...TODO
-    font-size: 30px; // ...TODO
+
+    .textItem {
+      margin-left: 5px;
+
+      &:last-of-type {
+        margin-right: 5px;
+      }
+    }
   }
 }
